Reduce whitespace and multiple fixes.
Minimize white-space.
Map languages to reduce redundancy.
Get last updated from last commit using github v4 api.
Retry v4 api if repo has moved.

--- a/style.css
+++ b/style.css
@@ -26,10 +26,7 @@
     margin-top: -.5rem
 }
 
-.level {
-    padding-bottom: .5rem
-}
 
-p {
-    padding-bottom: .5rem
-}
+
+
+
